--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <!-- Application container -->
   <ui-view class="app-container"></ui-view>
-
+Homar
   <!-- Application components -->
   <div class="app-components d-none">
     <script src="../../components/jquery/3.6.1/js/jquery.min.js"></script>
